2004-11-17  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.h:
	  Removed MUNGE_OPT_LAST_ENTRY, MUNGE_CIPHER_LAST_ENTRY,
	  MUNGE_MAC_LAST_ENTRY, MUNGE_ZIP_LAST_ENTRY, EMUNGE_LAST_ENTRY.
	* src/munged/zip.c: Removed use of MUNGE_ZIP_LAST_ENTRY.

	* src/libcommon/munge_msg.h: Removed MUNGE_MSG_LAST_ENTRY.

	* configure.ac, src/libcommon/munge.7.in, src/libmunge/munge.3.in,
	  src/libmunge/munge_ctx.3.in, src/libmunge/munge_enum.3.in,
	  src/munge/munge.1.in, src/munge/remunge.1.in, src/munge/unmunge.1.in,
	  src/munged/munged.8.in: Added munge_enum manpage.
	* src/libmunge/Makefile.am, src/libmunge/enum.c, src/libmunge/munge.h,
	  src/libmunge/strings.c: Added munge_enum_is_valid(),
	  munge_enum_int_to_str(), and munge_enum_str_to_int().
	  Removed munge_cipher_strings, munge_mac_strings, munge_zip_strings.
	  Replaced libmunge/strings.c with libmunge/enum.c.
	* src/munge/munge.c, src/munge/remunge.c, src/munge/unmunge.c:
	  Replaced use of munge_cipher_strings, munge_mac_strings, and
	  munge_zip_strings.

	* src/libcommon/str.c, src/munged/auth_recv.c, src/munged/hash.c,
	  src/munged/munged.c, src/munge/read.c: Tweaked formatting.

2004-11-11  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Tweaked inet_ntop replacement test for Solaris.

	* src/libmissing/inet_ntop.h: Added sys/socket.h include for socklen_t.

	* src/libmissing/inet_ntop.h: Changed #ifndef x to #if !x.
	* src/libmissing/strlcat.h, src/libmissing/strlcpy.h:
	  Changed #if #else x to #if !x.

	* src/libmunge/auth_send.c, src/libmunge/msg_client.c,
	  src/munged/munged.c: Replaced strlcat/strlcpy includes w/ missing.h.

	* configure.ac: Changed X_AC_CHECK_COND_LIB libnsl test
	  from inet_ntoa() to gethostbyname().

	* configure.ac, src/libmissing/inet_ntop.c, src/libmissing/inet_ntop.h,
	  src/libmissing/missing.h, src/munge/unmunge.c, src/munged/conf.c:
	  Added support for platforms lacking inet_ntop().
	  Replaced inet_ntoa() with inet_ntop().
